--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["DCIMG", "Justinmind's", "Pexels", "srcset"]
+  "cSpell.words": [
+    "DCIMG",
+    "Headshot",
+    "Justinmind's",
+    "Pexels",
+    "srcset",
+    "viewbox"
+  ]
 }
